--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.17.1",
     "formik": "^2.2.9",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
